[Feat] 요청사항 변경에 따른 DetailSupplement response 변경